syntax = "proto3";
option java_package = "com.kastik.datastore.proto";
option java_multiple_files = true;

message UserProfile{
  int32 id = 1;
  string name = 2;
  string nameEng = 3;
  string email = 4;
  string createdAt = 5;
  string updatedAt = 6;
  bool isAuthor = 7;
  bool isAdmin = 8;
  string lastLoginAt = 9;
  string uid = 10;
  string deletedAt = 11;
}